Fix button width on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -138,7 +138,7 @@ h3.sponsor-blurb {
 
 .register, .sponsor-btn, .resume {
     width: 15%;
-    min-width: 120px;
+    min-width: 150px;
     max-width: 200px;
 }
 
